ksmserver: Add text for the "Session is ending" event

If the user opts to turn on the notification popup for this event, they
expect it to show some text. Do so.

BUG: 493482
FIXED-IN: 6.3.0